2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (GRUB_XFS_EXTENT_BLOCK): Fix bitmask.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (nvlist_find_value): Fix return value.

2012-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix reiserfs big seek times.

	* grub-core/fs/reiserfs.c (grub_reiserfs_get_item): New argument
	exact. All users updated.
	(grub_reiserfs_read): Use nearest btree search for seeking.
	Fix return value on error.

2012-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/legacycfg.c (legacy_file): Default to restricted
	entries.
	* grub-core/commands/menuentry.c (grub_cmd_menuentry): Likewise.
	* docs/grub.texi: Update menuentry description.

2012-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Remove duplicate call to embed. Fixes
	crash when embedding onto filesystem.

2012-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (find_root_devices_from_poolname): Handle spaces in the
	name.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/ip.c (handle_dgram): Fix undeclared variable.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/autofs.c (read_fs_list): Revert accidental wrong
	commit.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>
2012-05-01  Bean  <bean123ch@gmail.com>

	* grub-core/net/ip.c (handle_dgram): Fix DHCP mac comparison.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/file.c (grub_file_read): Read nothing if len = 0.
	Special behaviour for len = 0 to read whole file isn't used anywhere and
	can cause buffer ovewrflows in several places.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/autofs.c (read_fs_list): Fix memory leak.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle RAIDZ on non-512B sectors.

	* grub-core/fs/zfs/zfs.c (grub_zfs_device_desc): New member
	max_children_ashift.